tests/src/frontend/typechecking/invalid/constraint_param.sk
trait X
class Y<T: X>(T)
fun test2<T>(_: Y<T>): void {
  void
}
